--- a/api-playground/demo.mdx
+++ b/api-playground/demo.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Playground Demo"
-description: "Enable users to interact with your API"
-api: "GET https://server.mintlify.com/api/v1/demo"
+title: 'Playground Demo'
+description: 'Enable users to interact with your API'
+api: 'GET https://server.mintlify.com/api/v1/demo'
 hideApiMarker: true
 ---
 
@@ -24,11 +24,11 @@ The API playground is an interactive environment to make requests and preview an
 
 To create an API page, you must set an `api` or `openapi` property in the page metadata. See [Configuration](/api-playground/configuration) for more details.
 
-## Defining API Parameters
+### Defining API Parameters
 
 See our [components reference](/components/api) for all components you can use to improve your API docs. We will automatically generate all parameter components if you are using [OpenApi](/api-playground/openapi).
 
-## Hiding API playgrounds
+### Hiding API playgrounds
 
 You can disable API playgrounds site-wide by setting `hidePlayground` in your `mint.json` file. You usually only want to disable the API playground if you have an OpenApi file and want to show the parameters without an interactive playground.
 
