--- a/writing-content/embed.mdx
+++ b/writing-content/embed.mdx
@@ -17,7 +17,7 @@ description: "Images, videos, and any HTML elements"
 
 <Tip>
 
-Mintlify supports [HTML tags in Markdown](https://www.markdownguide.org/basic-syntax/#html). This is helpful if you prefer HTML tags to Markdown syntax, and lets you create documentation with infinate flexibility.
+Mintlify supports [HTML tags in Markdown](https://www.markdownguide.org/basic-syntax/#html). This is helpful if you prefer HTML tags to Markdown syntax, and lets you create documentation with infinite flexibility.
 
 </Tip>
 
