Use different accordions for playground

--- a/settings/global.mdx
+++ b/settings/global.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Global Settings (mint.json)"
-description: "Mintlify gives you complete control over the look and feel of your documentation using the mint.json file"
+title: 'Global Settings (mint.json)'
+description: 'Mintlify gives you complete control over the look and feel of your documentation using the mint.json file'
 ---
 
 Every Mintlify site needs a `mint.json` file with the core configuration settings. Learn more about the [properties](#properties) or from an [example](#example-mint-json)
@@ -192,8 +192,16 @@ Example: `mintlify`
       </Expandable>
     </ResponseField>
 
-    <ResponseField name="hidePlayground" type="boolean">
-      If `hidePlayground` is `true`, all API playgrounds will be hidden.
+    <ResponseField name="playground" type="Playground">
+      Configurations for the API playground
+
+      <Expandable title="Playground">
+        <ResponseField name="mode" default="show" type='"show" | "simple" | "hidden"'>
+          Whether the playground is showing, hidden, or only displaying the endpoint with no added user interactivity `simple`
+
+          Learn more at the [playground guides](/api-playground/demo)
+        </ResponseField>
+      </Expandable>
     </ResponseField>
 
   </Expandable>
