--- a/api-playground/demo.mdx
+++ b/api-playground/demo.mdx
@@ -26,14 +26,36 @@ To create an API page, you must set an `api` or `openapi` property in the page m
 
 ### Defining API Parameters
 
-See our [components reference](/components/api) for all components you can use to improve your API docs. We will automatically generate all parameter components if you are using [OpenApi](/api-playground/openapi).
+See our [components reference](/components/api) for all components you can use to improve your API docs. We will automatically generate all parameter components if you are using [OpenAPI](/api-playground/openapi).
 
-### Hiding API playgrounds
+## Playground Settings
 
-You can disable API playgrounds site-wide by setting `hidePlayground` in your `mint.json` file. You usually only want to disable the API playground if you have an OpenApi file and want to show the parameters without an interactive playground.
+The playground settings can be configured in [mint.json](/settings/global) with a set of different "modes".
+
+<AccordionGroup>
+<Accordion title="Simple Playgrounds">
+  You can remove the user interactivity and only displays the information from the API endpoint with settng `api.playground.mode` as `simple`.
 
 ```json mint.json
 "api": {
-    "hidePlayground": true
+  "playground": {
+    "mode": "simple"
+  }
 }
 ```
+
+</Accordion>
+
+<Accordion title="Hide API Playgrounds">
+  You can disable API playgrounds site-wide by setting `api.playground.mode` as `hidden`. You usually only want to disable the API playground if you have an OpenApi file and want to show the parameters without an interactive playground.
+
+```json mint.json
+"api": {
+  "playground": {
+    "mode": "hidden"
+  }
+}
+```
+
+</Accordion>
+</AccordionGroup>
