Update demo to overview page

--- a/api-playground/overview.mdx
+++ b/api-playground/overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Playground Demo'
+title: 'Playground Overview'
 description: 'Enable users to interact with your API'
 api: 'GET https://server.mintlify.com/api/v1/demo'
 hideApiMarker: true
