--- a/writing-content/image.mdx
+++ b/writing-content/image.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Images"
-description: "Create images using markdown or embeds"
+title: 'Images'
+description: 'Create images using markdown or embeds'
 ---
 
 <img
@@ -36,6 +36,6 @@ Although not required, we recommend adding the `alt` and `title` attributes to i
 
 For more information, we recommend the following sections:
 
-<Card title="Frame Component Reference" href="/components/frame">
+<Card title="Frame Component Reference" icon="frame" href="/components/frame">
   Read the reference for the Frame component
 </Card>
