Fix typo as hide instead of hidden

--- a/api-playground/overview.mdx
+++ b/api-playground/overview.mdx
@@ -47,12 +47,12 @@ The playground settings can be configured in [mint.json](/settings/global) with 
 </Accordion>
 
 <Accordion title="Hide API Playgrounds">
-  You can disable API playgrounds site-wide by setting `api.playground.mode` as `hidden`. You usually only want to disable the API playground if you have an OpenApi file and want to show the parameters without an interactive playground.
+  You can disable API playgrounds site-wide by setting `api.playground.mode` as `hide`. You usually only want to disable the API playground if you have an OpenApi file and want to show the parameters without an interactive playground.
 
 ```json mint.json
 "api": {
   "playground": {
-    "mode": "hidden"
+    "mode": "hide"
   }
 }
 ```
