--- a/settings/global.mdx
+++ b/settings/global.mdx
@@ -196,7 +196,7 @@ Example: `mintlify`
       Configurations for the API playground
 
       <Expandable title="Playground">
-        <ResponseField name="mode" default="show" type='"show" | "simple" | "hidden"'>
+        <ResponseField name="mode" default="show" type='"show" | "simple" | "hide"'>
           Whether the playground is showing, hidden, or only displaying the endpoint with no added user interactivity `simple`
 
           Learn more at the [playground guides](/api-playground/demo)
