--- a/components/callouts.mdx
+++ b/components/callouts.mdx
@@ -9,7 +9,7 @@ description: "Use callouts to create add eye-catching context to your content"
 
 <Note>This adds a note in the content</Note>
 
-```jsx Note Component Example
+```jsx
 <Note>This adds a note in the content</Note>
 ```
 
@@ -17,7 +17,7 @@ description: "Use callouts to create add eye-catching context to your content"
 
 <Warning>This raises a warning to watch out for</Warning>
 
-```jsx Warning Component Example
+```jsx
 <Warning>This raises a warning to watch out for</Warning>
 ```
 
@@ -25,7 +25,7 @@ description: "Use callouts to create add eye-catching context to your content"
 
 <Info>This draws attention to important information</Info>
 
-```jsx Info Component Example
+```jsx
 <Info>This draws attention to important information</Info>
 ```
 
@@ -33,7 +33,7 @@ description: "Use callouts to create add eye-catching context to your content"
 
 <Tip>This suggests a helpful tip</Tip>
 
-```jsx Tip Component Example
+```jsx
 <Tip>This suggests a helpful tip</Tip>
 ```
 
@@ -41,6 +41,6 @@ description: "Use callouts to create add eye-catching context to your content"
 
 <Check>This brings us a checked status</Check>
 
-```jsx Check Component Example
+```jsx
 <Check>This brings us a checked status</Check>
 ```
