Low level doc improvements

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -3,11 +3,7 @@ title: 'Quickstart'
 description: 'Start building awesome documentation in under 5 minutes'
 ---
 
-## Create your docs repo
-
-Learn how to set up your documentation repository.
-
-<Accordion icon="screwdriver-wrench" title="Create a new repo on GitHub from our Starter Template">
+<Accordion icon="screwdriver-wrench" title="Don't have a Mintlify docs repo set up yet?">
   1. Navigate to our [Starter Kit](https://github.com/mintlify/starter). 
   2. Click on `Use this Template` to copy the Mintlify starter kit.
   ![](/images/use-this-template.png)
