--- a/development.mdx
+++ b/development.mdx
@@ -66,9 +66,12 @@ yarn global upgrade mintlify
 Here's how to solve some common problems when working with the CLI.
 
 <AccordionGroup>
-  <Accordion title="Mintlify is not loading">Update to Node v18.</Accordion>
-  <Accordion title="Mintlify is not loading after updating Node">
+  <Accordion title="Mintlify is not loading">
+    Update to Node v18. 
     Run `mintlify install` and try again.
+  </Accordion>
+  <Accordion title="Getting an unknown error">
+    Try navigating to the root of your device and delete the ~/.mintlify folder. Then run `mintlify dev` again.
   </Accordion>
 </AccordionGroup>
 
