--- a/settings/page-structure.mdx
+++ b/settings/page-structure.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Navigation"
+title: "Page Structure"
 description: "The navigation field in mint.json defines the pages that go in the navigation menu"
 ---
 
