Resolved Han's Comments

--- a/settings/navigation.mdx
+++ b/settings/navigation.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Page Structure"
+title: "Navigation"
 description: "The navigation field in mint.json defines the pages that go in the navigation menu"
 ---
 
