Update feedback specs

--- a/settings/global.mdx
+++ b/settings/global.mdx
@@ -250,9 +250,17 @@ Example: `mintlify`
   </Expandable>
 </ResponseField>
 
-<ResponseField name="hideFeedbackButtons" type="boolean" default="false">
-  Whether or not to hide the edit suggestion and raise and issue buttons at the
-  top of every page. Defaults to `false`
+<ResponseField name="feedback" type="Feedback">
+  Configurations to enable feedback buttons
+
+  <Expandable title="Feedback">
+    <ResponseField name="suggestEdit" type="boolean" default="false">
+    Enables a button to allow users to suggest edits via pull requests
+    </ResponseField>
+    <ResponseField name="raiseIssue" type="boolean" default="false">
+    Enables a button to allow users to raise an issue about the documentation
+    </ResponseField>
+  </Expandable>
 </ResponseField>
 
 <ResponseField name="modeToggle" type="ModeToggle">
