--- a/settings/custom-domain/subdirectory.mdx
+++ b/settings/custom-domain/subdirectory.mdx
@@ -4,7 +4,7 @@ description: "Host documentation at a /docs subdirectory"
 ---
 
 <Tip>
-  Custom subdirectory is available under the [Enterprise Plan](https://mintlify.com/pricing). Please [contact the team](mailto:hi@mintlify.com) to enable this feature.
+  Custom subdirectory is available under the [Business Plan](https://mintlify.com/pricing).
 </Tip>
 
 ## Set up Cloudflare
