--- a/settings/custom-domain/subdirectory.mdx
+++ b/settings/custom-domain/subdirectory.mdx
@@ -1,10 +1,12 @@
 ---
-title: "Subdirectory"
-description: "Host documentation at a /docs subdirectory"
+title: 'Subdirectory'
+description: 'Host documentation at a /docs subdirectory'
 ---
 
 <Tip>
-  Custom subdirectory is available under the [Enterprise Plan](https://mintlify.com/pricing). Please [contact the team](mailto:hi@mintlify.com) to enable this feature.
+  Custom subdirectory is available under the [Enterprise
+  Plan](https://mintlify.com/pricing). Please [contact the
+  team](mailto:hi@mintlify.com) to enable this feature.
 </Tip>
 
 ## Set up Cloudflare
@@ -15,13 +17,21 @@ Sign up for an account and [add your site to Cloudflare](https://developers.clou
 
 Navigate to the `Workers > Create a service`. You should be able to presented with the following screen where you can create a new Cloudlfare worker.
 
-<img alt="Create a Cloudflare worker" src="https://mintlify-assets.b-cdn.net/cloudflare-worker.png" style={{borderRadius: "0.5rem"}} />
+<img
+  alt="Create a Cloudflare worker"
+  src="https://mintlify-assets.b-cdn.net/cloudflare-worker.png"
+  style={{ borderRadius: '0.5rem' }}
+/>
 
 ### Add custom domain
 
 Once the worker is created, navigate to the worker settings and then `Triggers > Custom Domains`. Click on `Add Custom Domain` to then add your following domains into the list.
 
-<img alt="Cloudflare worker custom domain" src="https://mintlify-assets.b-cdn.net/cloudflare-worker-custom-domain.png" style={{borderRadius: "0.5rem"}} />
+<img
+  alt="Cloudflare worker custom domain"
+  src="https://mintlify-assets.b-cdn.net/cloudflare-worker-custom-domain.png"
+  style={{ borderRadius: '0.5rem' }}
+/>
 
 If you have trouble setting up custom subdirectory, [contact our support team](mailto:hi@mintlify.com) and we'll walk you through upgrading your hosting with us.
 
@@ -30,13 +40,14 @@ If you have trouble setting up custom subdirectory, [contact our support team](m
 Click on `Quick edit` and add the following script into the worker's code.
 
 <Tip>
-  Edit `DOCS_URL` by replacing [SUBDOMAIN] with your unique subdomain and `CUSTOM_URL` with your website's base URL.
+  Edit `DOCS_URL` by replacing [SUBDOMAIN] with your unique subdomain and
+  `CUSTOM_URL` with your website's base URL.
 </Tip>
 
 ```javascript
-addEventListener('fetch', event => {
-  event.respondWith(handleRequest(event.request))
-})
+addEventListener('fetch', (event) => {
+  event.respondWith(handleRequest(event.request));
+});
 
 async function handleRequest(request) {
   try {
@@ -44,8 +55,8 @@ async function handleRequest(request) {
     // If the request is to the docs subdirectory
     if (/^\/docs/.test(urlObject.pathname)) {
       // Then Proxy to Mintlify
-      const DOCS_URL = "[SUBDOMAIN].mintlify.dev";
-      const CUSTOM_URL = "polybase.xyz";
+      const DOCS_URL = '[SUBDOMAIN].mintlify.dev';
+      const CUSTOM_URL = '[YOUR_DOMAIN]';
 
       let url = new URL(request.url);
       url.hostname = DOCS_URL;
@@ -53,12 +64,11 @@ async function handleRequest(request) {
       let proxyRequest = new Request(url, request);
 
       proxyRequest.headers.set('Host', DOCS_URL);
-      proxyRequest.headers.set("X-Forwarded-Host", CUSTOM_URL);
-      proxyRequest.headers.set("X-Forwarded-Proto", "https");
+      proxyRequest.headers.set('X-Forwarded-Host', CUSTOM_URL);
+      proxyRequest.headers.set('X-Forwarded-Proto', 'https');
 
       return await fetch(proxyRequest);
     }
-
   } catch (error) {
     // if no action found, play the regular request
     return await fetch(request);
