changes to styling documentation

--- a/settings/example.mdx
+++ b/settings/example.mdx
@@ -1,8 +1,9 @@
 ---
-title: "Example Configuration"
+title: "Customization Overview"
 ---
 
-Example `mint.json` 
+Mintlify allows you to customize your docs through our `mint.json` file, where you can set properties for different styling attributes. You can find a standard `mint.json` file below, as well as in our starter template.
+
 
 ```json Example mint.json
 {
