--- a/settings/example.mdx
+++ b/settings/example.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Customization Overview"
+description: "Take a look at our example mint.json file" 
 ---
 
 Mintlify allows you to customize your docs through our `mint.json` file, where you can set properties for different styling attributes. You can find a standard `mint.json` file below, as well as in our starter template.
