--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -3,6 +3,8 @@ title: 'Quickstart'
 description: 'Start building awesome documentation in under 5 minutes'
 ---
 
+![Hero Image](https://mintlify-assets.b-cdn.net/quickstart-hero.svg)
+
 <Accordion icon="screwdriver-wrench" title="Don't have a Mintlify docs repo set up yet?">
   1. Navigate to our [Starter Kit](https://github.com/mintlify/starter). 
   2. Click on `Use this Template` to copy the Mintlify starter kit.
