fix: typo api-playground overview

--- a/api-playground/overview.mdx
+++ b/api-playground/overview.mdx
@@ -95,7 +95,7 @@ The playground settings can be configured in `mint.json` with a set of different
 
 <AccordionGroup>
 <Accordion title="Simple Playgrounds">
-  You can remove the user interactivity and only displays the information from the API endpoint with settng `api.playground.mode` as `simple`.
+  You can remove the user interactivity and only displays the information from the API endpoint by setting `api.playground.mode` as `simple`.
 
 ```json mint.json
 "api": {
