--- a/development.mdx
+++ b/development.mdx
@@ -1,47 +1,47 @@
 ---
-title: "Development"
-description: "Install the Mintlify CLI to preview changes locally"
+title: 'Development'
+description: 'Learn how to preview changes locally'
+icon: 'hammer'
 ---
 
-<Tabs>
-  <Tab title="npm">
+<Info>
+  **Prerequisite** You should have installed Node.js (version 18.10.0 or
+  higher).
+</Info>
 
-Using the [npm](https://www.npmjs.com) package manager
+Step 1. Install Mintlify on your OS:
 
-```bash Terminal
+<CodeGroup>
+
+```bash npm
 npm i -g mintlify
 ```
 
-  </Tab>
-  <Tab title="yarn">
-  Using the [yarn](https://yarnpkg.com) package manager
-
-```bash Terminal
+```bash yarn
 yarn global add mintlify
 ```
 
-  </Tab>
-</Tabs>
+</CodeGroup>
 
-## Previewing Changes Locally
+Step 2. Go to the docs are located (where you can find `mint.json`) and run the following command:
 
-Run the following command at the root of your documentation where `mint.json` is located. Mintlify will open at `localhost:3000`.
-
-```bash Running Mintlify
+```bash
 mintlify dev
 ```
+
+The documentation website is now available at `http://localhost:3000`.
 
 ### Custom Ports
 
 Mintlify uses port 3000 by default. You can use the `--port` flag to customize the port Mintlify runs on. For example, use this command to run in port 3333:
 
-```bash Running Mintlify with a custom port
+```bash
 mintlify dev --port 3333
 ```
 
 You will see an error like this if you try to run Mintlify in a port that's already taken:
 
-```md Example error message when port is busy
+```md
 Error: listen EADDRINUSE: address already in use :::3000
 ```
 
@@ -51,11 +51,11 @@ Each CLI is linked to a specific version of Mintlify. Please update the CLI if y
 
 <CodeGroup>
 
-```bash Update with npm
+```bash npm
 npm i -g mintlify@latest
 ```
 
-```bash Update with yarn
+```bash yarn
 yarn global upgrade mintlify
 ```
 
@@ -67,11 +67,19 @@ Here's how to solve some common problems when working with the CLI.
 
 <AccordionGroup>
   <Accordion title="Mintlify is not loading">
-    Update to Node v18. 
-    Run `mintlify install` and try again.
+    Update to Node v18. Run `mintlify install` and try again.
+  </Accordion>
+  <Accordion title="No such file or directory on Windows">
+Go to the `C:/Users/Username/.mintlify/` directory and remove the `mint`
+folder. Then Open the Git Bash in this location and run `git clone
+https://github.com/mintlify/mint.git`.
+
+Repeat step 3.
+
   </Accordion>
   <Accordion title="Getting an unknown error">
-    Try navigating to the root of your device and delete the ~/.mintlify folder. Then run `mintlify dev` again.
+    Try navigating to the root of your device and delete the ~/.mintlify folder.
+    Then run `mintlify dev` again.
   </Accordion>
 </AccordionGroup>
 
