Remove unneeded code file names

--- a/settings/page.mdx
+++ b/settings/page.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Page Titles and Metadata"
-description: "Setting the title and metadata for navigation and SEO"
+title: 'Page Titles and Metadata'
+description: 'Setting the title and metadata for navigation and SEO'
 ---
 
 ## The Basics
@@ -17,7 +17,7 @@ title: [title of the page]
 
 ```md Example
 ---
-title: "Page"
+title: 'Page'
 ---
 ```
 
@@ -25,14 +25,16 @@ title: "Page"
 
 <br />
 
-<Tip>We will use the name of the file if you forget to include a title.</Tip>
+<Tip>
+  Mintlify will use the name of the file if you forget to include a title.
+</Tip>
 
 Other metadata goes in between the same `---` lines. For example, this page uses this metadata:
 
 ```md page.mdx
 ---
-title: "Page Titles and Metadata"
-description: "Metadata is important for API pages and SEO optimization"
+title: 'Page Titles and Metadata'
+description: 'Metadata is important for API pages and SEO optimization'
 ---
 ```
 
@@ -62,7 +64,7 @@ openapi: "GET /users"
 
 You can show a description that shows directly under the title with the `description` metadata.
 
-```md Description Example
+```md
 description: "Your description goes here."
 ```
 
@@ -70,10 +72,10 @@ description: "Your description goes here."
 
 You can show a different title in the navigation with the `sidebarTitle` metadata. This is useful if your title is long and you want something shorter in the navigation links.
 
-```md Sidebar Title Example
+```md
 ---
-title: "Your very long page title you want to shorten"
-sidebarTitle: "Short title"
+title: 'Your very long page title you want to shorten'
+sidebarTitle: 'Short title'
 ---
 ```
 
@@ -81,10 +83,10 @@ sidebarTitle: "Short title"
 
 You can hide the headings preview on the right side of the page. This is useful if you don't have any headings, or you want to take advantage of the extra horizontal space.
 
-```md Wide Mode Example
+```md
 ---
-title: "Your page with no headings"
-mode: "wide"
+title: 'Your page with no headings'
+mode: 'wide'
 ---
 ```
 
@@ -92,7 +94,7 @@ mode: "wide"
 
 You can set meta tags like the image set when shared on social media by passing them into your page's metadata. Meta tags with colons need to be wrapped in quotes.
 
-```md Meta Tags Example
+```md
 "twitter:image": "/images/your-photo.jpg"
 ```
 
