--- a/settings/seo.mdx
+++ b/settings/seo.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Search Engine Optimization"
-description: "Mintlify automatically generates most meta tags. If you want to customize them, you can set default values in mint.json or change them per page."
+title: 'Search Engine Optimization'
+description: 'Mintlify automatically generates most meta tags. If you want to customize them, you can set default values in mint.json or change them per page.'
 ---
 
 <Accordion title="Supported Meta Tags">
@@ -27,7 +27,7 @@ description: "Mintlify automatically generates most meta tags. If you want to cu
 
 You can set default meta tags by adding the `metadata` field to your `mint.json`.
 
-```json mint.json
+```json
 "metadata": {
     "og:image": "link to your default meta tag image"
 }
@@ -37,10 +37,10 @@ You can set default meta tags by adding the `metadata` field to your `mint.json`
 
 Add your meta tags to the page's metadata like so:
 
-```md Top of your page
+```md
 ---
-title: "Your Example Page Title"
-"og:image": "link to your meta tag image"
+title: 'Your Example Page Title'
+'og:image': 'link to your meta tag image'
 ---
 ```
 
