--- a/settings/versioning.mdx
+++ b/settings/versioning.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Versioning"
-description: "Optionally, you can have separate versions for your docs. Mintlify lets you toggle content based on your docs version."
+title: 'Versioning'
+description: 'Optionally, you can have separate versions for your docs. Mintlify lets you toggle content based on your docs version.'
 ---
 
 ## Setup
@@ -20,9 +20,9 @@ You can add version values to anchors, groups, or individual pages.
 
 You can hide an entire anchor based on a version. This is useful when you have dozens of pages you want to hide. For example, for an API reference section.
 
-Simply add `version` to your anchor. Anchors without a version value are shown in every version.
+In `mint.json`, simply add `version` to your anchor. Anchors without a version value are shown in every version.
 
-```json mint.json
+```json
 "anchors": [
     {
         "name": "API Reference V1",
@@ -51,7 +51,7 @@ Simply add `version` to your groups. Groups without a version value are shown in
 
 In the example below, pages in `Nested Group V1` only show up when `v1` docs are shown.
 
-```json mint.json
+```json
 "navigation": [
     {
         "group": "Group without a version",
@@ -75,11 +75,11 @@ In the example below, pages in `Nested Group V1` only show up when `v1` docs are
 
 You can version a single page. Add `version` to the top of your page metadata like so:
 
-```md page.mdx
+```md
 ---
-title: "My page title"
-description: "My page description"
-version: "v1"
+title: 'My page title'
+description: 'My page description'
+version: 'v1'
 ---
 ```
 
