--- a/writing-content/image.mdx
+++ b/writing-content/image.mdx
@@ -18,6 +18,8 @@ The [markdown syntax](https://www.markdownguide.org/basic-syntax/#images) lets y
 ![title](/path/image.jpg)
 ```
 
+Note that the image file size must be less than 5MB. Otherwise, we recommend hosting on a service like [Cloudinary](https://cloudinary.com/) or [S3](https://aws.amazon.com/s3/). You can then use that URL and embed. 
+
 ### Using Embeds
 
 To get more customizability with images, you can also use [embeds](/writing-content/embed) to add images
