Add icons and docs

--- a/components/accordion.mdx
+++ b/components/accordion.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Accordions"
-description: "A dropdown component for toggling content"
+title: 'Accordions'
+description: 'A dropdown component for toggling content'
+icon: 'square-caret-down'
 ---
 
 <Accordion title="I am an Accordion.">
