--- a/components/api/expandable.mdx
+++ b/components/api/expandable.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Expand Object Properties"
-description: "Toggle to display nested properties."
+title: 'Expand Object Properties'
+description: 'Toggle to display nested properties.'
+icon: 'caret-down'
 ---
 
 <ResponseField name="user" type="User Object">
