--- a/components/api/param.mdx
+++ b/components/api/param.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Parameter Types"
-description: "Set path, query, and body parameters"
+title: 'Parameter Types'
+description: 'Set path, query, and body parameters'
+icon: 'input-text'
 ---
 
 All `ParamField` components are added as interactive elements in the API playground. See the [demo](/api-playground/demo) for an example.
