--- a/components/api/response.mdx
+++ b/components/api/response.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Response Types"
-description: "Display API response values"
+title: 'Response Types'
+description: 'Display API response values'
+icon: 'message'
 ---
 
 The `<ResponseField>` component is designed to define the return values of an API. Many docs also use `<ResponseField>` on pages when you need to list the types of something.
