--- a/components/api/sticky-examples.mdx
+++ b/components/api/sticky-examples.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Sticky Code Examples"
-description: "Display code blocks at the top-right of the page on desktop devices"
+title: 'Sticky Code Examples'
+description: 'Display code blocks at the top-right of the page on desktop devices'
+icon: 'sidebar-flip'
 ---
 
 The `<RequestExample>` and `<ResponseExample>` to stick code blocks to the top-right of a page even as you scroll. The components work on all pages even if you don't use an API playground.
