--- a/components/callouts.mdx
+++ b/components/callouts.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Callout Boxes"
-description: "Use callouts to create add eye-catching context to your content"
+title: 'Callout Boxes'
+description: 'Use callouts to create add eye-catching context to your content'
+icon: 'circle-exclamation'
 ---
 
 ### Note Callouts
