--- a/components/card-group.mdx
+++ b/components/card-group.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Card Group"
-description: "Show cards side by side in a grid format"
+title: 'Card Group'
+description: 'Show cards side by side in a grid format'
+icon: 'rectangles-mixed'
 ---
 
 The `CardGroup` component lets you group multiple `Card` components together. It's most often used to put multiple cards on the same column.
