--- a/components/card.mdx
+++ b/components/card.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Cards"
-description: "Highlight main points or links with customizable icons"
+title: 'Cards'
+description: 'Highlight main points or links with customizable icons'
+icon: 'rectangle'
 ---
 
 <Card title="Card Title" icon="link" href="/components/card-group">
@@ -56,5 +57,5 @@ Adjust the icon type using the `iconType` property color by using the `color` pr
 </ResponseField>
 
 <ResponseField name="image" type="string">
- Path to the image to display at the top of the card
+  Path to the image to display at the top of the card
 </ResponseField>
