--- a/components/code.mdx
+++ b/components/code.mdx
@@ -1,13 +1,14 @@
 ---
-title: "Code Blocks"
-description: "Display code with optional syntax highlighting"
+title: 'Code Blocks'
+description: 'Display code with optional syntax highlighting'
+icon: 'code'
 ---
 
 <RequestExample>
 
 ````md Code Block Example
 ```javascript Code Block Example
-const hello = "world";
+const hello = 'world';
 ```
 ````
 
@@ -56,12 +57,12 @@ class HelloWorld {
 You can add more text after the programming language to set the name of your code example. The text can be anything as long as its all in one line.
 
 ```javascript Code Block Example
-const hello = "world";
+const hello = 'world';
 ```
 
 ````md Code Block Example
 ```javascript Code Block Example
-const hello = "world";
+const hello = 'world';
 ```
 ````
 
