--- a/components/tabs.mdx
+++ b/components/tabs.mdx
@@ -1,6 +1,7 @@
 ---
-title: Tabs
-description: Toggle content using the Tabs component
+title: 'Tabs'
+description: 'Toggle content using the Tabs component'
+icon: 'window-restore'
 ---
 
 You can add any number of tabs.
