--- a/settings/page.mdx
+++ b/settings/page.mdx
@@ -79,6 +79,17 @@ sidebarTitle: 'Short title'
 ---
 ```
 
+## Sidebar Icons
+
+Want an icon for your sidebar item like the ones in [components](/components/accordion)? You can set an `icon` attribute in the metadata! All icons from [Font Awesome](https://fontawesome.com/icons) are available for us.
+
+```md
+---
+title: 'Code Block'
+icon: 'rectangle-code'
+---
+```
+
 ## Wide Mode
 
 You can hide the headings preview on the right side of the page. This is useful if you don't have any headings, or you want to take advantage of the extra horizontal space.
