--- a/components/accordion-group.mdx
+++ b/components/accordion-group.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Accordion Group"
-description: "Group multiple accordions into a single display."
+title: 'Accordion Group'
+description: 'Group multiple accordions into a single display.'
+icon: 'table-rows'
 ---
 
 Simply add `<AccordionGroup>` around your existing `<Accordion>` components.
