--- a/components/frame.mdx
+++ b/components/frame.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Image Frame"
-description: "Use the Frame component to wrap images or other components in a container."
+title: 'Image Frame'
+description: 'Use the Frame component to wrap images or other components in a container.'
+icon: 'frame'
 ---
 
 Frames are very helpful if you want to center an image.
