Add external redirects setup

--- a/settings/page.mdx
+++ b/settings/page.mdx
@@ -96,8 +96,19 @@ You can hide the headings preview on the right side of the page. This is useful 
 
 ```md
 ---
-title: 'Your page with no headings'
+title: 'Page with no headings'
 mode: 'wide'
+---
+```
+
+## External Redirects
+
+If you want the sidebar to open an external URL, you can set the `url` metadata in any page.
+
+```md
+---
+title: 'Page that goes to external link'
+url: 'https://www.npmjs.com/package/mintlify'
 ---
 ```
 
