--- a/contributing.mdx
+++ b/contributing.mdx
@@ -120,6 +120,33 @@ Please refer to these files for style rules.
   [repository](https://github.com/mintlify/config).
 </Tip>
 
+
+## Git
+
+We are following [git flow](https://www.atlassian.com/git/tutorials/comparing-workflows/gitflow-workflow) when creating branches and are doing back merges from `main` to `dev` to reduce the overhead of PR's. Please refer to the following rules when creating branches:
+
+### Feature branches
+
+- Create branch based on 'dev'
+- After finishing your work, create a PR to `main`
+- Squashing can be used when closing the PR after approval
+
+### Release branches
+
+- Create from `dev`
+- Create a PR to `main`
+- Merge to `main` after approval
+- Squashing can be used when closing the PR after approval
+- Merge `main` to `dev` after successfully closing the PR
+
+### Hotfix branches
+
+- Create from `main` when the bug is on `main`, create from `dev` when the bug is only on `dev`
+- Target the base branch in a PR.
+- Squashing can be used when closing the PR after approval
+- Merge `main` to `dev` after successfully closing the PR, if the PR is based on `main`
+
+
 ## Links
 
 - [MDXContentController](/code/mdx-content-controller)
