--- a/contributing.mdx
+++ b/contributing.mdx
@@ -127,7 +127,7 @@ We are following [git flow](https://www.atlassian.com/git/tutorials/comparing-wo
 
 ### Feature branches
 
-- Create branch based on 'dev'
+- Create branch based on `dev`
 - After finishing your work, create a PR to `main`
 - Squashing can be used when closing the PR after approval
 
