--- a/contributing.mdx
+++ b/contributing.mdx
@@ -121,13 +121,13 @@ Please refer to these files for style rules.
 </Tip>
 
 
-## Git
+## Git branching model
 
 We are following [git flow](https://www.atlassian.com/git/tutorials/comparing-workflows/gitflow-workflow) when creating branches and are doing back merges from `main` to `dev` to reduce the overhead of PR's. Please refer to the following rules when creating branches:
 
 ### Feature branches
 
-- Create branch based on `dev`
+- Create from `dev`
 - After finishing your work, create a PR to `main`
 - Squashing can be used when closing the PR after approval
 
