--- a/contributing.mdx
+++ b/contributing.mdx
@@ -128,13 +128,13 @@ We are following [git flow](https://www.atlassian.com/git/tutorials/comparing-wo
 ### Feature branches
 
 - Create from `dev`
-- After finishing your work, create a PR to `main`
+- After finishing your work, create a PR, that targets `main`
 - Squashing can be used when closing the PR after approval
 
 ### Release branches
 
 - Create from `dev`
-- Create a PR to `main`
+- After finishing the release create a PR, that targets `main`
 - Merge to `main` after approval
 - Squashing can be used when closing the PR after approval
 - Merge `main` to `dev` after successfully closing the PR
@@ -142,7 +142,7 @@ We are following [git flow](https://www.atlassian.com/git/tutorials/comparing-wo
 ### Hotfix branches
 
 - Create from `main` when the bug is on `main`, create from `dev` when the bug is only on `dev`
-- Target the base branch in a PR.
+- After finishing the fix create a PR, that targets the base branch.
 - Squashing can be used when closing the PR after approval
 - Merge `main` to `dev` after successfully closing the PR, if the PR is based on `main`
 
