--- a/contributing.mdx
+++ b/contributing.mdx
@@ -127,13 +127,13 @@ We are following [git flow](https://www.atlassian.com/git/tutorials/comparing-wo
 
 ### Feature branches
 
-- Create from `dev`
+- Based on `dev`
 - After finishing your work, create a PR, that targets `main`
 - Squashing can be used when closing the PR after approval
 
 ### Release branches
 
-- Create from `dev`
+- Based on `dev`
 - After finishing the release create a PR, that targets `main`
 - Merge to `main` after approval
 - Squashing can be used when closing the PR after approval
@@ -141,7 +141,7 @@ We are following [git flow](https://www.atlassian.com/git/tutorials/comparing-wo
 
 ### Hotfix branches
 
-- Create from `main` when the bug is on `main`, create from `dev` when the bug is only on `dev`
+- Based on `main` when the bug is on `main`, based on `dev` when the bug is only on `dev`
 - After finishing the fix create a PR, that targets the base branch.
 - Squashing can be used when closing the PR after approval
 - Merge `main` to `dev` after successfully closing the PR, if the PR is based on `main`
