--- a/contributing.mdx
+++ b/contributing.mdx
@@ -141,7 +141,7 @@ We are following [git flow](https://www.atlassian.com/git/tutorials/comparing-wo
 
 ### Hotfix branches
 
-- Based on `main` when the bug is on `main`, based on `dev` when the bug is only on `dev`
+- Based on `main` when the bug is on `main`, based on `dev` when the bug is exclusively on `dev`
 - After finishing the fix create a PR, that targets the base branch.
 - Squashing can be used when closing the PR after approval
 - Merge `main` to `dev` after successfully closing the PR, if the PR is based on `main`
