--- a/contributing.mdx
+++ b/contributing.mdx
@@ -129,21 +129,23 @@ We are following [git flow](https://www.atlassian.com/git/tutorials/comparing-wo
 
 - Based on `dev`
 - After finishing your work, open a PR, that targets `main`
-- Squashing can be used when closing the PR after approval
+- Merge to `main` after approval
+- Can be squashed
 
 ### Release branches
 
 - Based on `dev`
 - After finishing the release, open a PR, that targets `main`
 - Merge to `main` after approval
-- Squashing can be used when closing the PR after approval
+- Can be squashed
 - Merge `main` to `dev` after successfully closing the PR
 
 ### Hotfix branches
 
 - Based on `main` when the bug is on `main`, based on `dev` when the bug is exclusively on `dev`
 - After finishing the fix, open a PR, that targets the base branch.
-- Squashing can be used when closing the PR after approval
+- Merge to target branch after approval
+- Can be squashed
 - Merge `main` to `dev` after successfully closing the PR, if the PR is based on `main`
 
 
