--- a/contributing.mdx
+++ b/contributing.mdx
@@ -123,7 +123,7 @@ Please refer to these files for style rules.
 
 ## Git branching model
 
-We are following [git flow](https://www.atlassian.com/git/tutorials/comparing-workflows/gitflow-workflow) when creating branches and are doing back merges from `main` to `dev` to reduce the overhead of PR's. Please refer to the following rules when creating branches:
+We are following [git flow](https://www.atlassian.com/git/tutorials/comparing-workflows/gitflow-workflow) when creating branches and are doing back merges from `main` to `dev` to reduce the overhead of PR's. Please refer to the following rules when creating or merging branches:
 
 ### Feature branches
 
