Remove unneeded quickstart accordion

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -5,16 +5,10 @@ description: 'Start building awesome documentation in under 5 minutes'
 
 ![Hero Image](https://mintlify-assets.b-cdn.net/quickstart-hero.svg)
 
-<Accordion icon="screwdriver-wrench" title="Don't have a Mintlify docs repo set up yet?">
-  1. Navigate to our [Starter Kit](https://github.com/mintlify/starter). 
-  2. Click on `Use this Template` to copy the Mintlify starter kit.
-  ![](/images/use-this-template.png)
-  3. Create a new repository with the appropriate name and sharing preferances. 
-  ![](/images/new-repository.png)
-  4. Fill out our [Onboarding Form](https://mintlify.typeform.com/start) with your repo details to deploy your docs
-  5. You’re all set! Now it’s time to update, style, and personalize your docs
-
-</Accordion>
+<Info>
+  **Prerequisite** You should have your Mintlify docs set up after going through
+  [onboarding](https://mintlify.com/start)
+</Info>
 
 ## Setup your development
 
