--- a/writing-content/embed.mdx
+++ b/writing-content/embed.mdx
@@ -33,6 +33,8 @@ Loads another HTML page within the document. Most commonly used for embedding vi
 <iframe src="https://www.youtube.com/embed/4KzFe50RQkQ"> </iframe>
 ```
 
+To have videos autoplay, add `autoplay = {true}`. 
+
 <Tip> Additionally, we support mp4 files up to 5 MB and you can also upload your videos to storage services like Cloudinary to reference them in your Mintlify documentation! </Tip>
 
 ### Images
