--- a/api-playground/overview.mdx
+++ b/api-playground/overview.mdx
@@ -24,6 +24,10 @@ The API playground is an interactive environment to make requests and preview an
 
 To create an API page, you must set an `api` or `openapi` property in the page metadata. See [Configuration](/api-playground/configuration) for more details.
 
+<Warning>
+If using a folder to store your api pages, you cannot use `api` for the name of the folder unless it is nested inside another folder. Folder names such as `api-reference` are accepted.
+</Warning>
+
 ### Defining API Parameters
 
 See our [components reference](/components/api) for all components you can use to improve your API docs. We will automatically generate all parameter components if you are using [OpenAPI](/api-playground/openapi).
