added startup plan callouts and deploy check

--- a/development.mdx
+++ b/development.mdx
@@ -2,6 +2,9 @@
 title: 'Development'
 description: 'Learn how to preview changes locally'
 ---
+<Tip>
+Unlimited editors available under the [Startup Plan](https://mintlify.com/pricing)
+</Tip>
 
 <Info>
   **Prerequisite** You should have installed Node.js (version 18.10.0 or
@@ -59,6 +62,10 @@ yarn global upgrade mintlify
 ```
 
 </CodeGroup>
+
+## Deployment
+You should see the following if the deploy successfully went through:
+<img src ="/images/checks-passed.png" style={{width: "50 rem"}}/>
 
 ## Troubleshooting
 
