--- a/settings/custom-domain/subdirectory.mdx
+++ b/settings/custom-domain/subdirectory.mdx
@@ -4,8 +4,7 @@ description: 'Host documentation at a /docs subdirectory'
 ---
 
 <Tip>
-  Custom subdirectory is available under the [Business
-  Plan](https://mintlify.com/pricing).
+  Custom subdirectory is available under the [Startup Plan](https://mintlify.com/pricing).
 </Tip>
 
 ## Set up Cloudflare
