--- a/contributing.mdx
+++ b/contributing.mdx
@@ -120,6 +120,42 @@ Please refer to these files for style rules.
   [repository](https://github.com/mintlify/config).
 </Tip>
 
+## Git branching model
+
+We are following [git flow](https://www.atlassian.com/git/tutorials/comparing-workflows/gitflow-workflow) when creating branches and are doing back merges from `main` to `dev` to reduce the overhead of PR's. Please refer to the following rules when creating or merging branches:
+
+### Feature branches
+
+- Based on `dev`
+- After finishing your work, open a PR, that targets `main`
+- Merge to `main` after approval
+- Can be squashed
+
+### Release branches
+
+- Based on `dev`
+- After finishing the release, open a PR, that targets `main`
+- Merge to `main` after approval
+- Can be squashed
+- Merge `main` to `dev` after successfully closing the PR
+
+### Hotfix branches
+
+- Based on `main` when the bug is on `main`, based on `dev` when the bug is exclusively on `dev`
+- After finishing the fix, open a PR, that targets the base branch.
+- Merge to target branch after approval
+- Can be squashed
+- Merge `main` to `dev` after successfully closing the PR, if the PR is based on `main`
+
+### Squash
+
+- Whenever you want to squash commits, make sure that the branch is immediately deleted afterwards and not merged to anything else as it can cause conflicts on all changed files.
+
+### Rebase/Force-push
+
+- This means rewriting git history. Can be used on feature branches if you are working alone on it and nobody is reviewing it already.
+- Only do this if you are certain that nobody pulled this branch, because their branch will be broken and unusable and it means potentially loosing changes or having a lot of conflicts.
+
 ## Links
 
 - [MDXContentController](/code/mdx-content-controller)
