--- a/contributing.mdx
+++ b/contributing.mdx
@@ -153,7 +153,7 @@ We are following [git flow](https://www.atlassian.com/git/tutorials/comparing-wo
 
 ### Rebase/Force-push
 
-- This means rewriting git history. Can be used on feature branches if you are working alone on it and nobody is reviewing it already.
+- This means rewriting git history. Can be used on feature branches, if you are working alone on it and nobody is reviewing it already.
 - Only do this if you are certain that nobody pulled this branch, because their branch will be broken and unusable and it means potentially loosing changes or having a lot of conflicts.
 
 ## Links
