--- a/writing-content/text.mdx
+++ b/writing-content/text.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Rich Text"
-description: "Text, title, and styling in standard markdown"
+title: 'Rich Text'
+description: 'Text, title, and styling in standard markdown'
 ---
 
 ## Titles
@@ -66,4 +66,14 @@ To create a blockquote, add a `>` in front of a paragraph.
 > Dorothy followed her through many of the beautiful rooms in her castle.
 >
 > The Witch bade her clean the pots and kettles and sweep the floor and keep the fire fed with wood.
+```
+
+### LaTeX
+
+Mintlify supports [LaTeX](https://www.latex-project.org) through the Latex component.
+
+<Latex>8 x (vk x H1 - H2) = (0,1)</Latex>
+
+```md
+<Latex>8 x (vk x H1 - H2) = (0,1)</Latex>
 ```
