--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -3,7 +3,7 @@ title: 'Quickstart'
 description: 'Start building awesome documentation in under 5 minutes'
 ---
 
-![Hero Image](https://mintlify-assets.b-cdn.net/quickstart-hero.svg)
+![Hero Image](https://mintlify-assets.b-cdn.net/illustration-optimized.svg)
 
 <Info>
   **Prerequisite** You should have your Mintlify docs set up after going through
