update writing content

--- a/writing-content/overview.mdx
+++ b/writing-content/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Writing Content"
-description: "Introduction on how to add and edit content"
+title: "Components"
+description: "Enhance your docs with our pre-built components "
 ---
 
 Components are reusable building blocks for your documentation. They can be added **directly within your files**. Some components are rendered from [Markdown syntax](https://www.markdownguide.org/basic-syntax/), while other components work the same way as [React components](https://reactjs.org/docs/components-and-props.html).
@@ -10,7 +10,6 @@ Components are reusable building blocks for your documentation. They can be adde
   docs beautiful without formatting things yourself.
 </Tip>
 
-Visit [our text guide](/writing-content/text) to learn basic markdown syntax.
 
 ## Examples
 
@@ -22,7 +21,7 @@ Links to pages in your docs need to be root-relative. Basically, you should incl
 
 Relative links like `[link to text](../text)` will open slower because we cannot optimize them as easily.
 
-### Using a Component
+### Code Blocks
 
 The following example is a [Code](/writing-content/code) component, which lets you display syntax-highlighted code.
 
@@ -46,9 +45,9 @@ class HelloWorld {
 ```
 ````
 
-### Creating a callout
+### Callouts
 
-To present additional context outside of the main content, you can use a [Callout](/components/callouts) component.
+To present additional context outside of the main content, you can use a [Callout](/components/callouts) component. Find Warnings and Notes in addition to Tip callouts here. 
 
 <Tip>This suggests a helpful tip</Tip>
 
@@ -56,9 +55,37 @@ To present additional context outside of the main content, you can use a [Callou
 <Tip>This suggests a helpful tip</Tip>
 ```
 
-## Components
+### Accordions
 
-There are a variety of components like [Accordions](/components/accordion), [Cards](/components/card), and tons others that you can explore in the [components reference](/components).
+Use the [Accordian](/components/accordian) component to create a dropdown with additional content.
+
+<Accordion title="I am an Accordion.">
+  You can put any content in here.
+</Accordion>
+
+```md
+<Accordion title="I am an Accordion.">
+  You can put any content in here.
+</Accordion>
+```
+
+### Cards 
+
+To highlight important points and links, you can use a [Card](/components/card) component.
+
+<Card title="Click on me" icon="link" href="/components/card">
+  This is how you use a card with an icon and a link. Clicking on this card
+  brings you to the Card components page.
+</Card>
+
+```md
+<Card title="Click on me" icon="link" href="/components/card">
+  This is how you use a card with an icon and a link. Clicking on this card
+  brings you to the Card components page.
+</Card>
+```
+### Other
+For a full list of pre-built components, see our [Components library](/components).
 
 ### Requests
 
