update config page

--- a/settings/global.mdx
+++ b/settings/global.mdx
@@ -204,6 +204,12 @@ Example: `mintlify`
       </Expandable>
     </ResponseField>
 
+    <ResponseField name="maintainOrder" type="boolean">
+      Enabling this flag ensures that key ordering in OpenAPI pages matches the key ordering defined in the OpenAPI file.
+
+      <Warning>This behavior will soon be enabled by default, at which point this field will be deprecated.</Warning>
+    </ResponseField>
+
   </Expandable>
 </ResponseField>
 
