--- a/migrating.mdx
+++ b/migrating.mdx
@@ -1,24 +1,6 @@
 ---
 title: "Migrating your Docs"
-description: "Mintlify has a scraper to easily migrate from common doc platforms, such as Docusaurus, Gitbook, and Readme."
+description: "Mintlify can easily migrate your docs from common doc platforms, such as Docusaurus, Gitbook, and Readme."
 ---
 
-Step 1. Install the Mintlify CLI scraper: 
-```npm
-npm install @mintlify/scraping -g
-```
-
-Step 2. Navigate to the folder containing your docs and run the following command to scrape the entire docs:
-```npm 
-mintlify-scrape section <url> 
-```
-
-To scrape one page, run `mintlify-scrape page <url>` in your desired folder. 
-
-<Warning>
-Check your pages to ensure that images are rendering properly and links are working. Internal links (to other pages in the docs) may be broken. 
-</Warning>
-
-Step 3. Add the files into your `mint.json` [navigation](/settings/navigation) to render them 
-
-Step 4. [Automate your API reference docs with openAPI](/api-playground/openapi)
+If you're interested in having your docs migrated over for free, contact our team at hi@mintlify.com.
