Moving migrations to the main section

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -10,6 +10,12 @@ Welcome to Mintlify's docs! Get started creating beautiful docs effortlessly. If
 See how other companies are building high-converting documentation on our
 [showcase](https://mintlify.com/showcase).
 
+<Info>
+  **Migrations** The Mintlify team can help you migrate your docs if it is
+  currently hosted elsewhere. If you're interested in having your docs migrated
+  over for free, contact our team at hi@mintlify.com.
+</Info>
+
 ## Get Started
 
 <CardGroup cols={2}>
@@ -27,7 +33,7 @@ See how other companies are building high-converting documentation on our
 
 </CardGroup>
 
-## Take your docs to the next level
+## Customizations
 
 <CardGroup cols={2}>
 
