update release git merge section

--- a/contributing.mdx
+++ b/contributing.mdx
@@ -136,7 +136,7 @@ We are following [git flow](https://www.atlassian.com/git/tutorials/comparing-wo
 - Based on `dev`
 - After finishing the release, open a PR, that targets `main`
 - Merge to `main` after approval
-- Can be squashed
+- Dont' squash, as it messes with git history and causes conflicts
 - Merge `main` to `dev` after successfully closing the PR
 
 ### Hotfix branches
